--- a/config/riff-build.yaml
+++ b/config/riff-build.yaml
@@ -557,6 +557,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - secrets
   verbs:
   - get
