--- a/config/riff-knative.yaml
+++ b/config/riff-knative.yaml
@@ -2822,7 +2822,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
-    certmanager.k8s.io/inject-ca-from: riff-system/riff-knative-serving-cert
+    cert-manager.io/inject-ca-from: riff-system/riff-knative-serving-cert
   creationTimestamp: null
   labels:
     component: knative.projectriff.io
@@ -3192,7 +3192,7 @@ spec:
           defaultMode: 420
           secretName: riff-knative-webhook-server-cert
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   labels:
@@ -3202,13 +3202,14 @@ metadata:
 spec:
   commonName: riff-knative-webhook-service.riff-system.svc
   dnsNames:
+  - riff-knative-webhook-service.riff-system.svc
   - riff-knative-webhook-service.riff-system.svc.cluster.local
   issuerRef:
     kind: Issuer
     name: riff-knative-selfsigned-issuer
   secretName: riff-knative-webhook-server-cert
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   labels:
@@ -3222,7 +3223,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    certmanager.k8s.io/inject-ca-from: riff-system/riff-knative-serving-cert
+    cert-manager.io/inject-ca-from: riff-system/riff-knative-serving-cert
   creationTimestamp: null
   labels:
     component: knative.projectriff.io
