--- a/config/riff-core.yaml
+++ b/config/riff-core.yaml
@@ -2724,7 +2724,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   annotations:
-    certmanager.k8s.io/inject-ca-from: riff-system/riff-core-serving-cert
+    cert-manager.io/inject-ca-from: riff-system/riff-core-serving-cert
   creationTimestamp: null
   labels:
     component: core.projectriff.io
@@ -3066,7 +3066,7 @@ spec:
           defaultMode: 420
           secretName: riff-core-webhook-server-cert
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   labels:
@@ -3076,13 +3076,14 @@ metadata:
 spec:
   commonName: riff-core-webhook-service.riff-system.svc
   dnsNames:
+  - riff-core-webhook-service.riff-system.svc
   - riff-core-webhook-service.riff-system.svc.cluster.local
   issuerRef:
     kind: Issuer
     name: riff-core-selfsigned-issuer
   secretName: riff-core-webhook-server-cert
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   labels:
@@ -3096,7 +3097,7 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   annotations:
-    certmanager.k8s.io/inject-ca-from: riff-system/riff-core-serving-cert
+    cert-manager.io/inject-ca-from: riff-system/riff-core-serving-cert
   creationTimestamp: null
   labels:
     component: core.projectriff.io
